# metacpp

./: .appveyor.uml  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  Doxyfile.in  README.md  appveyor.yml  conanfile.txt  config.h.in  test.sqlite
cmake/Macros/: ScanSources.cmake
cmake/Modules/: FindJsonCpp.cmake  FindMongoDB.cmake  FindMySQL.cmake  FindPostgreSQL.cmake  FindSpiderMonkey.cmake  FindSqlite3.cmake
examples/: scripting-example.cpp
src/compat/: strptime.cpp  strptime.h
src/core/: InitVisitor.cpp  InitVisitor.h  MetaInfo.h  MetaObject.cpp  MetaObject.h  MetaType.h  Object.cpp  Object.h  VisitorBase.cpp  VisitorBase.h
src/db/: ASTWalkerBase.cpp  ASTWalkerBase.h  ExpressionAssignment.cpp  ExpressionAssignment.h  ExpressionNode.cpp  ExpressionNode.h  ExpressionWhereClause.cpp  ExpressionWhereClause.h  TypePromotion.h
src/db/nosql/: NoSqlStorable.cpp  NoSqlStorable.h
src/db/sql/: SqlColumnAssignment.cpp  SqlColumnAssignment.h  SqlColumnConstraint.cpp  SqlColumnConstraint.h  SqlColumnMatcher.h  SqlExpressionTreeWalker.cpp  SqlExpressionTreeWalker.h  SqlResultIterator.cpp  SqlResultIterator.h  SqlResultSet.cpp  SqlResultSet.h  SqlStatement.cpp  SqlStatement.h  SqlStorable.cpp  SqlStorable.h  SqlTransaction.cpp  SqlTransaction.h  SqlWhereClause.cpp  SqlWhereClause.h  ValueEvaluator.h
src/db/sql/connectors/: SqlConnectorBase.cpp  SqlConnectorBase.h  SqlStatementImpl.cpp  SqlStatementImpl.h  SqlTransactionImpl.cpp  SqlTransactionImpl.h
src/db/sql/connectors/mysql/: MySqlConnector.cpp  MySqlConnector.h  MySqlStatementImpl.cpp  MySqlStatementImpl.h  MySqlTransactionImpl.cpp  MySqlTransactionImpl.h
src/db/sql/connectors/postgres/: PostgresConnector.cpp  PostgresConnector.h  PostgresStatementImpl.cpp  PostgresStatementImpl.h  PostgresTransactionImpl.cpp  PostgresTransactionImpl.h
src/db/sql/connectors/sqlite3/: SqliteConnector.cpp  SqliteConnector.h  SqliteStatementImpl.cpp  SqliteStatementImpl.h  SqliteTransactionImpl.cpp  SqliteTransactionImpl.h
src/json/: JsonDeserializerVisitor.cpp  JsonDeserializerVisitor.h  JsonSerializerVisitor.cpp  JsonSerializerVisitor.h
src/nosql/: NoSqlStorable.cpp  NoSqlStorable.h
src/scripting/: ScriptEngineBase.cpp  ScriptEngineBase.h  ScriptProgramBase.cpp  ScriptProgramBase.h  ScriptThreadBase.cpp  ScriptThreadBase.h  Scriptable.cpp  Scriptable.h
src/scripting/js/: JSScriptEngine.cpp  JSScriptEngine.h  JSScriptProgram.cpp  JSScriptProgram.h  JSScriptThread.cpp  JSScriptThread.h
src/serialization/: TypeResolverFactory.cpp  TypeResolverFactory.h
src/serialization/bson/: BsonDeserializerVisitor.cpp  BsonDeserializerVisitor.h  BsonSerializerVisitor.cpp  BsonSerializerVisitor.h
src/serialization/json/: JsonDeserializerVisitor.cpp  JsonDeserializerVisitor.h  JsonSerializerVisitor.cpp  JsonSerializerVisitor.h
src/sql/: SqlColumnAssignment.cpp  SqlColumnAssignment.h  SqlColumnConstraint.cpp  SqlColumnConstraint.h  SqlColumnMatcher.h  SqlResultColumnInfo.cpp  SqlResultColumnInfo.h  SqlResultIterator.cpp  SqlResultIterator.h  SqlResultSet.cpp  SqlResultSet.h  SqlStatement.cpp  SqlStatement.h  SqlStatementBase.cpp  SqlStatementBase.h  SqlStorable.cpp  SqlStorable.h  SqlTransaction.cpp  SqlTransaction.h  SqlWhereClause.cpp  SqlWhereClause.h
src/sql/connectors/: SqlConnectorBase.cpp  SqlConnectorBase.h  SqlStatementBase.cpp  SqlStatementBase.h  SqlStatementImpl.cpp  SqlStatementImpl.h  SqlTransactionImpl.cpp  SqlTransactionImpl.h
src/sql/connectors/postgres/: PostgresConnector.cpp  PostgresConnector.h  PostgresStatementImpl.cpp  PostgresStatementImpl.h  PostgresTransactionImpl.cpp  PostgresTransactionImpl.h
src/sql/connectors/sqlite3/: SqliteConnector.cpp  SqliteConnector.h  SqliteStatement.cpp  SqliteStatement.h  SqliteStatementImpl.cpp  SqliteStatementImpl.h  SqliteTransactionImpl.cpp  SqliteTransactionImpl.h
src/utils/: Array.cpp  Array.h  CDebug.cpp  CDebug.h  DateTime.cpp  DateTime.h  Nullable.h  SharedDataBase.cpp  SharedDataBase.h  SharedDataPointer.cpp  SharedDataPointer.h  String.cpp  String.h  StringBase.cpp  StringBase.h  Uri.h  Utils.h  Variant.cpp  Variant.h
test/: DateTimeTest.cpp  DateTimeTest.h  JSScriptTest.cpp  JSScriptTest.h  ObjectTest.cpp  ObjectTest.h  SqlTest.cpp  SqlTest.h  StringTest.cpp  StringTest.h  VariantTest.cpp  VariantTest.h  test.cpp
